--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,8 +4,17 @@ body {
   color: skyblue;
 }
 
-div {
-  transform: skewX(-30deg);
+.header {
   display: flex;
   justify-content: center;
+
+  li {
+    margin: 10px;
+    list-style: none;
+  }
+}
+
+.main {
+  width: 80%;
+  margin: 20px auto;
 }
